# Recordin

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/loader/: Cargo.toml  build.rs
crates/loader/src/: entry.rs  env.rs  envs.rs  hook.rs  hooks.rs  inject.rs  lib.rs  output.rs
crates/loader/src/hook/: com.rs  graphics.rs  infect.rs  lib_load.rs  sound.rs  timing.rs
crates/loader/src/hook/graphics/: dxgi.rs  video_codec.rs  vulkan.rs
crates/loader/src/hook/graphics/dxgi/: factory.rs  swap_chain.rs
crates/loader/src/hook/graphics/vulkan/: device.rs  instance.rs  present.rs  swap_chain.rs
crates/loader/src/hook/sound/: audio_codec.rs  wasapi.rs
crates/loader/src/hook/sound/wasapi/: audio_client.rs  audio_render_client.rs  device.rs  device_collection.rs  device_enumerator.rs  property_store.rs
crates/loader/src/hook/timing/: get_tick_count.rs  sleep.rs  sync.rs  time_get_time.rs
crates/loader/src/hooks/: com.rs  graphics.rs  infect.rs  libload.rs  sound.rs  times.rs
crates/loader/src/hooks/graphics/: video_codec.rs  vulkan.rs
crates/loader/src/hooks/graphics/vulkan/: devices.rs  instances.rs  preseting.rs  swapchains.rs
crates/loader/src/hooks/sound/: audio_codec.rs
crates/loader/src/hooks/sound/wasapi/: audio_client.rs  audio_render_client.rs  device.rs  device_collection.rs  device_enumerator.rs  property_store.rs
crates/loader/src/output/: audio_codec.rs  video_codec.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
