[package]
name = "recordin-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
recordin-common = { path = "../common" }
anyhow = "1.0.100"
dashmap = "6.1.0"
flexi_logger = "0.31.7"
hmod = "0.1.1"
log = "0.4.29"
num-rational = "0.4.2"
recordin-macro = { version = "0.1.0", path = "../macro" }
regex = "1.12.2"
retour = "0.4.0-alpha.4"
scuffle-ffmpeg = { git = "https://github.com/ScuffleCloud/scuffle.git", version = "0.3.5", default-features = false, features = [
    "link_system_ffmpeg",
] }
vulkanalia = "0.34.0"
windows-result = "0.4.1"
windows-strings = "0.5.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Performance",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_Media",
] }
winsplit = "0.1.0"
windows = { version = "0.62.2", features = [
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11"
] }
windows-core = "0.62.2"
parking_lot = "0.12.5"
kanal = "0.1.1"
expanding_slice_rb = "0.2.2"
widestring = "1.2.1"
libloading = "0.9.0"
arrayvec = "0.7.6"
humantime = "2.3.0"
